added support for timestamps in protocol buffers